Improve tilestore queries and remove jsqlparser